## Licensed under the Apache License, Version 2.0 (the "License"); you may not
## use this file except in compliance with the License.  You may obtain a copy
## of the License at
##
##   http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
## WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
## License for the specific language governing permissions and limitations
## under the License.

nobase_dist_localdata_DATA = \
    server/main.js \
    www/browse/_compact_database.html \
    www/browse/_create_database.html \
    www/browse/_create_document.html \
    www/browse/_delete_database.html \
    www/browse/_delete_document.html \
    www/browse/_save_view_as.html \
    www/browse/database.html \
    www/browse/document.html \
    www/browse/index.html \
    www/couch_tests.html \
    www/favicon.ico \
    www/image/add.gif \
    www/image/apply.gif \
    www/image/bg.png \
    www/image/cancel.gif \
    www/image/compact.gif \
    www/image/delete-mini.gif \
    www/image/delete.gif \
    www/image/grippie.gif \
    www/image/hgrad.gif \
    www/image/load.gif \
    www/image/logo.png \
    www/image/order-asc.gif \
    www/image/order-desc.gif \
    www/image/path.gif \
    www/image/progress.gif \
    www/image/run-mini.gif \
    www/image/run.gif \
    www/image/running.gif \
    www/image/save.gif \
    www/image/spinner.gif \
    www/image/test_failure.gif \
    www/image/test_success.gif \
    www/image/thead.gif \
    www/image/thead-key.gif \
    www/image/toggle-collapse.gif \
    www/image/toggle-expand.gif \
    www/image/twisty.gif \
    www/index.html \
    www/replicator.html \
    www/script/browse.js \
    www/script/couch.js \
    www/script/couch_tests.js \
    www/script/jquery.js \
    www/script/jquery.cookies.js \
    www/script/jquery.couch.js \
    www/script/jquery.dialog.js \
    www/script/jquery.resizer.js \
    www/script/jquery.suggest.js \
    www/script/json2.js \
    www/script/pprint.js \
    www/style/layout.css
